fix(info) : fix overflow info box

--- a/src/modules/Auth/components/info/info.scss
+++ b/src/modules/Auth/components/info/info.scss
@@ -14,6 +14,7 @@
     display: block;
   }
   .info-box {
+    overflow: hidden;
     @include responsive-padding-y(8px, 68px, 45px, 90px);
     .title-box {
       display: flex;
